crates/auspex/tests/snapshots/contract__help_surface.snap
---
source: crates/auspex/tests/contract.rs
expression: pretty(&help)
---
{
  "about": "the omens: rules that read the tree and propose intentions (§9)",
  "bare": "opens the rules browser at a terminal; emits this down a pipe",
  "format_version": 2,
  "name": "auspex",
  "short": "aus",
  "verbs": [
    "run",
    "plan",
    "ls",
    "test",
    "help",
    "version"
  ],
  "version": "0.1.0"
}
