crates/auspex/tests/snapshots/contract__version.snap
---
source: crates/auspex/tests/contract.rs
expression: pretty(&version)
---
{
  "format_version": 2,
  "name": "auspex",
  "short": "aus",
  "version": "0.1.0"
}
